k8s/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-eks-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/hello"
spec:
  selector:
    app: test-eks-backend
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
